--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,33 @@ footer{
     height: 100%;
 }
 
+.tarjeta {
+    min-height: 100%;
+    background: #ffffff;
+    box-shadow: 0 2px 5px #a5a3a3;
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+}
+
+section {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content:space-between;
+    align-items: center;
+}
+
+section h3, section p{
+    margin: 0;
+    padding: 1rem;;
+}
+
+.contenido p{
+    padding: 1rem;
+}
+
 .contenedor-menu{
 
 }
@@ -75,4 +102,24 @@ a{
 
 .liCategoria:hover{
     color: #767879;
+}
+
+button {
+    width: 100%;
+    padding: 1em;
+    background-color: #1e365a;
+    color: #ffffff;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+button:hover {
+    background-color: #639aec;
+    color: #000000;
+    cursor: pointer;
+}
+button:focus {
+    background-color: lightgray;
+    color: #000000;
+    cursor: pointer;
 }
