--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,14 @@ aside{
 
 main{
     grid-area: main;
+    padding: 1%;
 }
 
 footer{
     grid-area: footer;
+    text-align: center;
+    color: #000;
+    padding: 1rem;
 }
 
 .contenedor-grid{
